style: fixed header and footer alignment

--- a/style.css
+++ b/style.css
@@ -15,13 +15,15 @@ body{
 }
 
 #nav-bar{
+/* box-shadow: 2px 2px 15px #0f0f0a; */
+  border-bottom-right-radius: 20px;
   font-size: 2rem;
   margin-bottom: 1rem;
 }
 
 .app{
   display:block;
-  margin: 1rem auto;
+  margin: 4rem auto;
   width: 30rem;
 }
 
@@ -67,9 +69,11 @@ body{
 }
 
 #footer{
+  width: 100%;
   position:fixed;
   bottom:0;
   font-size: large;
+  border-top-left-radius: 20px;
 }
 #footer>#about{
   font-size: 1.5rem;
